--- a/main.css
+++ b/main.css
@@ -2,20 +2,20 @@
     border: 1px solid red;
 } */
 
-html { 
-    background: url("backgrounds/space3.jpg") no-repeat center center fixed; 
+/* html { 
+    background: url("assets/space3.jpg") no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-}
+} */
 
 .level {
     padding-top: 50px;
 }
 
 .city {
-    color: skyblue;
+    color:slategrey;
     font-family: 'Otomanopee One', sans-serif;
     font-size: 4.5vw;
 }
@@ -33,4 +33,49 @@ html {
 .weather-icon {
     width: 50%;
     height: auto;
+}
+
+.section {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.section h1 {
+  text-align: center;
+  font-size: 6rem;
+  font-family: "Cookie";
+  padding: 20px;
+  margin: 15px;
+  z-index: 1;
+  opacity: 0.7;
+}
+
+.video-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+.color-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: lightblue;
+  width: 100%;
+  height: 100vh;
+  opacity: 0.5;
+}
+
+footer {
+    background: url("assets/cartoon1.jpg") no-repeat fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
