--- a/main.css
+++ b/main.css
@@ -1,81 +1,118 @@
 /* * {
-    border: 1px solid red;
+  border: 1px red solid;
 } */
 
-/* html { 
-    background: url("assets/space3.jpg") no-repeat center center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-} */
-
-.level {
-    padding-top: 50px;
-}
-
-.city {
-    color:slategrey;
-    font-family: 'Otomanopee One', sans-serif;
-    font-size: 4.5vw;
-}
-
-.date {
-    color: white;
-    font-family: 'Merienda', cursive;
-    font-size: 2.5vw;
-}
-
-.heading {
-    color: red;    
-}
-
-.weather-icon {
-    width: 50%;
-    height: auto;
-}
-
-.section {
-  position: relative;
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
-}
-
-.section h1 {
+/*Top Title*/
+#title {
   text-align: center;
-  font-size: 6rem;
+  font-size: 3rem;
   font-family: "Cookie";
-  padding: 20px;
-  margin: 15px;
-  z-index: 1;
   opacity: 0.7;
 }
 
+/*Location Text*/
+.city {
+  color:rgb(178, 202, 226);
+  font-family: 'Otomanopee One', sans-serif;
+  font-size: 4rem;
+}
+
+/*Date Text*/
+.date {
+  color: white;
+  font-family: 'Merienda', cursive;
+  font-size: 2rem;
+  overflow:auto;
+}
+
 .video-container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 105%;
+overflow: hidden;
 }
 
-.color-overlay {
+.video-container video {
+min-width: 100%;
+min-height: 100%;
   position: absolute;
-  top: 0;
-  left: 0;
-  background-color: lightblue;
-  width: 100%;
-  height: 100vh;
-  opacity: 0.5;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+object-fit: cover;
 }
 
-footer {
-    background: url("assets/cartoon1.jpg") no-repeat fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+/*Adds Dark Layer to Background video*/
+.video-container:after {
+content: '';
+z-index: 1;
+height: 100%;
+width: 100%;
+top: 0;
+left: 0;
+background: rgba(0, 0, 0, 0.28);
+position: absolute;
+}
+
+
+.showcase {
+height: 100vh;
+display: flex;
+align-items: center;
+justify-content: center;
+text-align: center;
+color: #fff;
+padding: 0 20px;
+}
+
+/*Keeps Content Visible*/
+.content {
+z-index: 2;
+}
+
+/*Box Heading*/
+.heading {
+color:red;
+}
+
+input[type="checkbox"] {
+visibility: hidden;
+}
+
+input[type="checkbox"]:checked + label {
+transform: rotate(360deg);
+background-color: #000;
+}
+
+input[type="checkbox"]:checked + label::before {
+transform: translateX(33.5px);
+background-color: #FFF;
+}
+
+label {
+display: flex;
+width: 75px;
+height: 38px;
+border: 3px solid;
+border-radius: 99em;
+position: relative;
+transition: transform .75s ease-in-out;
+transform-origin: 50% 50%;
+cursor: pointer;
+}
+
+label::before {
+transition: transform .75s ease;
+transition-delay: .5s;
+content: "";
+display: block;
+position: absolute;
+width: 25px;
+height: 25px;
+background-color: #000;
+border-radius: 50%;
+top: 3px;
+left: 5px;
 }
